assets/sass/components/_link-embedder.scss
.le-photo img {
  cursor: zoom-in;
}

.le-rich,
.le-photo {
  overflow: hidden;
  display: block;
  max-width: 100%; // required to contain iframes on iphone
  max-height: 50vh;
  margin: 6px 0;
}

.le-card,
.le-rich {
  .le-thumbnail-placeholder {
    display: none;
  }

  .le-thumbnail {
    float: left;

    img {
      max-height: 60px;
      margin-right: 8px;
      border: 0;
      box-shadow: none;
      vertical-align: bottom;
    }
  }

  h3 {
    font-size: 1em;
    line-height: 1em;
    display: block;
    margin: 0;
  }

  p {
    font-size: 0.9em;
    line-height: 1.2em;
    margin: 4px 0;
    display: table-cell;
  }
}

.le-card.le-provider-convosapp {
  h3,
  p {
    display: none;
  }

  .le-thumbnail img {
    max-height: 40vh;
    max-width: 100%;
  }
}

.le-provider-link ~ .le-goto-link:before,
.le-author-link ~ .le-goto-link:before {
  content: "\2013\00a0";
}

.le-paste .le-provider-link:before {
  content: "Hosted by ";
}

.le-video video {
  background: var(--body-bg);
  border: var(--hr-border);
  display: block;
  width: 100%;
  height: auto;
}

.le-image-card .le-goto-link {
  display: none;
}

.le-photo img {
  max-height: 220px;
  max-width: 100%;
}

.le-paste {
  font-size: 0.9rem;
  border: var(--hr-border);
  max-height: 8.8em;
  max-width: 100%;
  overflow: hidden;

  &.without-frame {
    &, .hljs {
      background: transparent;
      border: 0;
      padding: 0;
    }

    &:after {
      content: '' !important;
    }
  }

  .hljs {
    margin: 0;
  }

  .hljs-ln-numbers {
    padding: 0 0.3em;
  }

  .le-meta {
    background: var(--syntax-hl-base-bg);
    color: var(--text-color);
    padding: 0.3em;
    margin: 0;
    cursor: zoom-in;
    position: relative;

    &:after {
      @extend .fas;
      content: fa-content($fa-var-angle-down);
      font-size: 1.2em;
      position: absolute;
      top: 0.4em;
      right: 0.4em;
      transition: transform 0.25s;
      cursor: pointer;
    }
  }

  ol {
    margin: 0.2rem 0;
  }

  &.is-expanded {
    max-height: none;
    overflow-x: auto;

    .le-meta {
      cursor: zoom-out;

      &:after {
        transform: rotate(180deg);
      }
    }
  }
}

.instagram-media {
  box-shadow: none !important;
  max-width: 400px !important;
}

